# zombiAlloc

./: .gitignore  CMakeCache.txt  CMakeLists.txt  Makefile  README.md  cmake_install.cmake  mmap_test  perf.data  perf.data.old
include/: list.h  lock.h  maps.h
src/: alloc.c  maps.c
test/: mmap_test.c
